--- a/src/app/User/usersidenav/usersidenav.component.css
+++ b/src/app/User/usersidenav/usersidenav.component.css
@@ -2,10 +2,12 @@ mat-sidenav-container {
   height: 100vh;
 }
 
-mat-sidenav-content{
+mat-sidenav-content {
   overflow-y: auto;
   background-color: #e4e9f7;
+  position: relative; /* Added position relative */
 }
+
 mat-sidenav-content::before {
   content: "";
   position: absolute;
@@ -21,91 +23,82 @@ mat-sidenav-content::before {
   z-index: -1;
 }
 
-
 mat-sidenav {
   width: 300px;
   background-color: whitesmoke;
 }
 
-.logo{
-display: block;
-margin-top: 20px;
-margin-bottom: 20px;
-margin-left: auto;
-margin-right: auto;
-width: 70%;
+.logo {
+  display: block;
+  margin: 20px auto;
+  width: 70%;
 }
 
 .mat-mdc-list-base {
   display: block;
-  height: 85vh;
 }
-.side-toggle{
-    font-size: 1.5rem; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center; cursor: 
-    pointer; 
-    margin-right: 10px;
-    margin-left: -10px;
+
+.side-toggle {
+  font-size: 1.5rem; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  cursor: pointer; 
+  margin-right: 10px;
+  margin-left: -10px;
 }
+
 .datetime-container {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-    padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  padding: 0.5rem;
 }
 
 .datetime-container i {
-     font-size: 1.4rem; 
-     margin-right: 0.5rem;
+  font-size: 1.4rem; 
+  margin-right: 0.5rem;
 }
 
 .mat-sidenav-content {
-     flex: 1;
-     overflow-y: auto;
+  flex: 1;
+  overflow-y: auto;
 }
-.mat-sidenav {
-    width: 300px;
-    background-color: whitesmoke;
-  }
-  
+
 .side-nav-content {
-    list-style: none;
-    padding: 0;
-    margin-bottom: 0%;
-  }
-  
+  list-style: none;
+  padding: 0;
+  margin-bottom: 0%;
+}
+
 .nav-list-item {
-    color: #fff;
-    min-height: fit-content;
-    width: auto;
-    display: flex;
-    align-items: center;
-    transition: 0.2s linear;
+  color: #fff;
+  min-height: fit-content;
+  width: auto;
+  display: flex;
+  align-items: center;
+  transition: 0.2s linear;
 }
 
 .nav-list-item:hover,
 .logout-item:hover {
   background-color: #4070f4;
   border-radius: 8px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin: 0 5px; /* Adjusted margin */
 }
+
 .nav-list-item i {
-    font-size: 1.3rem;
-    width: 30px;
-    height: 25px;
-    margin-right: 10px;
-    margin-left: 5px;
-    text-align: center;
-    align-content: center;
-  }
-  
+  font-size: 1.3rem;
+  width: 30px;
+  height: 25px;
+  margin: 0 10px 0 5px; /* Adjusted margin */
+  text-align: center;
+}
+
 .nav-list-item span {
-    margin-left: 10px;
-    width: 170px;
-    text-transform: capitalize;
+  margin-left: 10px;
+  width: 170px;
+  text-transform: capitalize;
 }
 
 @media screen and (max-width: 768px) {
